src/snapshots/clight__parser__tests__wrong_struct_decl.snap
---
source: src/parser.rs
expression: result
snapshot_kind: text
---
Err(
    MietteDiagnostic {
        message: "Expected a struct field identifier, got: Token { kind: CloseBrace, token: \"}\", offset: 10 }",
        code: None,
        severity: None,
        help: None,
        url: None,
        labels: Some(
            [
                LabeledSpan {
                    label: Some(
                        "here",
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            10,
                        ),
                        length: 1,
                    },
                    primary: false,
                },
            ],
        ),
    },
)
